# patrol

./: Cargo.toml
browser/: .eslintignore  .eslintrc.cjs  package.json  svelte.config.js  vite.config.js
browser/src/lib/api/: client.ts  index.ts
browser/src/lib/components/: logout.svelte
browser/src/routes/: +layout.svelte  +layout.ts  +page.svelte
browser/src/routes/clients/: +page.svelte  +page.ts
browser/src/routes/clients/new/: +page.svelte
hooks/: pre-commit
server/: .env  .gitignore  Cargo.toml
server/db/: schema.sql
server/db/migrations/: 20220819182426_create_users_roles.sql  20230121160610_create_user_tokens.sql  20230122102953_oauth_tokens.sql
server/src/: db.rs  keys.rs  main.rs  static_files.rs
server/src/api/: clients.rs  error.rs  mod.rs  oauth.rs  user.rs  users.rs  well_known.rs
server/src/api/crypto/: hashing.rs
server/src/models/: clients.rs  mod.rs  roles.rs  user_emails.rs  user_tokens.rs  users.rs  users_roles.rs
server/src/models/oauth/: mod.rs  token_requests.rs  tokens.rs
server/static/: index.html  main.js  package.json
src/: db.rs  main.rs
src/api/: mod.rs  user.rs
src/models/: mod.rs  roles.rs
