[package]
name = "patrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
argon2 = "0.4.1"
base64 = "0.20.0"
chrono = "0.4.22"
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
log = "0.4.17"
once_cell = "1.15.0"
phf = "0.11.1"
poem = { version = "1.3.0", features = ["embed", "anyhow"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
rsa = "0.7.2"
rust-embed = "6.4.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }

[dependencies.poem-openapi]
version = "2.0.18"
features = ["chrono", "uuid", "swagger-ui"]

[dependencies.sea-orm]
version = "0.10.0"
features = [
  "macros",
  "with-chrono",
  "with-rust_decimal",
  "with-uuid",
  "sqlx-postgres",
  "runtime-tokio-rustls",
]
