[package]
name = "patrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
argon2 = "0.4.1"
base64 = "0.21.0"
chrono = "0.4.22"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
log = "0.4.17"
once_cell = "1.15.0"
phf = "0.11.1"
poem = { version = "1.3.52", features = ["embed", "anyhow", "static-files", "cookie", "session"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
rsa = "0.8.1"
rust-embed = { version = "6.4.2", features = ["include-exclude"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
console = "0.15.2"
better-panic = "0.3.0"
sha2 = "0.10.6"
base64-url = "1.4.13"
hex = "0.4.3"
url = "2.3.1"

[dependencies.poem-openapi]
version = "2.0.18"
features = ["chrono", "uuid", "swagger-ui"]

[dependencies.sea-orm]
version = "0.10.6"
features = [
  "macros",
  "postgres-array",
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "with-chrono",
  "with-rust_decimal",
  "with-uuid",
]
